# msfs-neofly-aircraft-data-extractor

./: CMakeLists.txt  LICENSE  README.md  cond_comp.h.in  main.cpp  tokei.toml  version.h.in
.github/workflows/: build.yml  release.yml
res/: version.rc
src/msfs/: msfs_package_reader.cpp  msfs_package_reader.h
src/neofly/: neofly_aircraft_data.cpp  neofly_aircraft_data.h
src/simconnect/: simconnect_connection.cpp  simconnect_connection.h
